--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.rmc.rmc-mini-mvcs": "2.3.0",
     "com.rmc.rmc-readme": "1.2.2",
     "com.unity.2d.pixel-perfect": "5.0.3",
     "com.unity.2d.sprite": "1.0.0",
