Add Unity Multiplayer Center Package(s)

--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -3,12 +3,16 @@
     "com.rmc.rmc-readme": "1.2.2",
     "com.unity.2d.pixel-perfect": "5.0.3",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ai.navigation": "2.0.4",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.center.quickstart": "1.0.0",
+    "com.unity.multiplayer.playmode": "1.2.2",
     "com.unity.multiplayer.tools": "2.2.0",
+    "com.unity.multiplayer.widgets": "0.5.0",
     "com.unity.netcode.gameobjects": "2.0.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.services.multiplayer": "0.6.0",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
